k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: better-app-dev
  labels:
    name: better-app-dev
    environment: dev
