k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: better-app-deployment
  namespace: better-app-dev
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: better-app
  template:
    metadata:
      labels:
        app: better-app
    spec:
      containers:
      - name: better-app
        image: ghcr.io/jaylikhare316/better_app:dev-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
