k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: better-app-statefulset
  namespace: better-app-dev
spec:
  serviceName: better-app-headless
  replicas: 2
  selector:
    matchLabels:
      app: better-app
  template:
    metadata:
      labels:
        app: better-app
    spec:
      containers:
      - name: better-app
        image: ghcr.io/jaylikhare316/better_app:dev-11c8a4bb28451ac51fd1f5e579df4997a8b8c1f0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: data
          mountPath: /data
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
